Update GetAll to return Page instead of List